# todocli

./: Cargo.toml  PLAN.md  README.md  TESTING.md  build.rs
src/: app.rs  events.rs  main.rs
src/data/: database.rs  mod.rs  todo.rs
src/ui/: detail_view.rs  dialog.rs  main_view.rs  mod.rs  theme.rs
