[package]
name = "todocli"
version = "0.1.0"
edition = "2021"
description = "A TUI-based todo application with Tokyo Night theme"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
ratatui = "0.25"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3"
